--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+<title>Lasagna Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/lasagna.html">Lasagna Recipe</a>
+   <h1>Lasagna Recipe</h1> 
 </body>
 </html>
