--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,43 @@
 <title>Lasagna Recipe</title>
 </head>
 <body>
-   <h1>Lasagna Recipe</h1> 
+   <h1>Lasagna</h1>
+   <img src="/images/lasagna.jpg" alt="Lasagna Photo">
+   <h1>Description</h1>
+   <p>Also known as lasagne, Italian: [laˈzaɲɲe]) is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices.</p>
+    <p>The dish may be topped with grated cheese, which becomes melted during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven. The resulting baked pasta is cut into single-serving square or rectangular portions.</p> 
+    <h1>Ingredients</h1>
+    <ul>
+        <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+        <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+        <li><strong>Tomato products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+        <li><strong>Sugar:</strong> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+        <li><strong>Spices and seasonings:</strong> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+        <li><strong>Lasagna noodles:</strong> Use store-bought or homemade lasagna noodles.</li>
+        <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+        <li><strong></strong></li>
+        <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+
+    </ul>
+    <h1>Steps</h1>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
+    <h1>How to Layer Lasagna</h1>
+    <ol>
+        <li>Meat sauce.</li>
+        <li>Noodles.</li>
+        <li>Ricotta mixture.</li>
+        <li>Mozzarella slices.</li>
+        <li>Meat sauce.</li>
+        <li>Parmesan cheese.</li>
+        <li>Repeat the layers, then top with the remaining Parmesan.</li>
+    </ol>
 </body>
+<footer>Recipe taked from <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">www.allrecipes.com</a></footer>
 </html>
