Add 3 pages of recipes and update index page
Update index page with 3 more recipe page links, all recipe pages have the same estructure

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -45,4 +45,5 @@
     </ol>
 </body>
 <footer>Recipe taked from <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">www.allrecipes.com</a></footer>
+<a href="../index.html">Return to main page</a>
 </html>
