Setup width image size to '512'

--- a/recipes/chop-suey.html
+++ b/recipes/chop-suey.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Chop Suey</h1>
-   <img src="/images/chop-suey.jpg" alt="Chop Suey Photo">
+   <img src="/images/chop-suey.jpg" width="512" alt="Chop Suey Photo">
    <h1>Description</h1>
    <p>This chop suey is fast and easy to make. My mother always made this recipe; we love it as-is, but you can substitute a can of Chinese mixed vegetables for the bean sprouts if you want more color and texture. If desired, serve over hot rice and top with chow mein noodles and soy sauce.</p>
     <h1>Ingredients</h1>
