--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Lasagna</h1>
-   <img src="/images/lasagna.jpg" alt="Lasagna Photo">
+   <img src="/images/lasagna.jpg" width="512" alt="Lasagna Photo">
    <h1>Description</h1>
    <p>Also known as lasagne, Italian: [laˈzaɲɲe]) is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices.</p>
     <p>The dish may be topped with grated cheese, which becomes melted during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven. The resulting baked pasta is cut into single-serving square or rectangular portions.</p> 
