--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Pesto Pasta</h1>
-   <img src="/images/pesto-pasta.jpg" alt="Recipe Photo">
+   <img src="/images/pesto-pasta.jpg" width="512" alt="Recipe Photo">
    <h1>Description</h1>
    <p>Pesto pasta is easy to make and full of flavor. It tastes good hot or cold!</p>
 <p>This top-rated pesto pasta recipe, which comes together in just 15 minutes, is the perfect quick and easy weeknight dinner.  </p> 
