--- a/recipes/grilled-shrimp.html
+++ b/recipes/grilled-shrimp.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Spicy Lime Grilled Shrimp</h1>
-   <img src="/images/grilled-shrimp.jpg" alt="Grilled shrimp Photo">
+   <img src="/images/grilled-shrimp.jpg" width="512" alt="Grilled shrimp Photo">
    <h1>Description</h1>
    <p>Grilled shrimp with a lime base and some kick!</p>
     <h1>Ingredients</h1>
